apps/visa-processor/visa-processor.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: visa-processor
  labels:
    app: visa-processor
spec:
  replicas: 1
  selector:
    matchLabels:
      app: visa-processor
  template:
    metadata:
      labels:
        app: visa-processor
    spec:
      containers:
        - name: visa-processor
          image: "docker.io/burrsutter/hello:1.0.0"
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
