apps/visa-processor/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: visa-processor
  labels:
    app: visa-processor
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: visa-processor
